--- a/static/vue_instructions.html
+++ b/static/vue_instructions.html
@@ -30,7 +30,7 @@
         <li v-for="(e,i) in arr">{{i}}:{{e}}</li>
     </ul>
     <ul>
-        <li v-for="(e,i) in arr">{{i}}:{{e}}</li>
+        <li v-for="(v,k) in obj">{{k}}:{{v}}</li>
     </ul>
 </div>
 </body>
