--- a/static/vue_instructions.html
+++ b/static/vue_instructions.html
@@ -13,10 +13,27 @@
                 data: {//vue实例所对应的html变量范围
                     msg:"hello world",
                     age:19,
+                    flag:true,
                     arr:['aa','bb','cc'],
                     obj:{
                         name:"asdg",
                         id:"123"
+                    },
+                    lists:[
+                        {name:"adsf",age:1},
+                        {name:"adss",age:2},
+                        {name:"dsf",age:13}
+                    ]
+                },
+                methods:{
+                    click1(){
+                        this.age++;
+                    },
+                    decrease(){
+                        this.age--;
+                    },
+                    showHide(){
+                        this.flag=!this.flag;
                     }
                 }
             })
@@ -32,6 +49,16 @@
     <ul>
         <li v-for="(v,k) in obj">{{k}}:{{v}}</li>
     </ul>
+    <ul>
+        <li v-for="(e,i) in lists">{{i}}:{{e}}:{{e.name}}</li>
+    </ul>
+
+    <button @click="click1">increase</button>
+    <button @click="decrease">decrease</button>
+    <!--内容显示隐藏-->
+    <p v-show="flag">显示隐藏示例</p>
+    <p v-show="age>18">年龄大于18岁了</p>
+    <button @click="showHide">是否显示</button>
 </div>
 </body>
 </html>
