--- a/static/vue_instructions.html
+++ b/static/vue_instructions.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +22,8 @@
                         {name:"adsf",age:1},
                         {name:"adss",age:2},
                         {name:"dsf",age:13}
-                    ]
+                    ],
+                    imgUrl:"https://cn.vuejs.org/images/logo.png"
                 },
                 methods:{
                     click1(){
@@ -59,6 +59,14 @@
     <p v-show="flag">显示隐藏示例</p>
     <p v-show="age>18">年龄大于18岁了</p>
     <button @click="showHide">是否显示</button>
+    <!--使用if else-->
+    <p v-if="age===18">18</p>
+    <p v-else-if="age===20">20</p>
+    <p v-else>not</p>
+    <!--三目表达式-->
+    <p v-if="flag?age=18:age=20">{{age}}</p>
+    <!--样式绑定-->
+    <img v-bind:src="imgUrl" width="100" height="100">
 </div>
 </body>
 </html>
