--- a/static/vue_instructions.html
+++ b/static/vue_instructions.html
@@ -23,7 +23,14 @@
                         {name:"adss",age:2},
                         {name:"dsf",age:13}
                     ],
-                    imgUrl:"https://cn.vuejs.org/images/logo.png"
+                    imgUrl:"https://cn.vuejs.org/images/logo.png",
+                    title:"图片",
+                    class_a1:"a1",
+                    class_a2:"a2",
+                    class_a3:"a3",
+                    class_a4:{color:'#f60'},
+                    arrCSS:[],
+                    cssFlag:false
                 },
                 methods:{
                     click1(){
@@ -39,6 +46,20 @@
             })
         }
     </script>
+    <style>
+    .a1 {
+        color:red;
+        font-size: 25px;
+        border:1px solid #f60;
+        background:#f60
+    }
+    .a2 {
+        background:blue
+    }
+    .a3 {
+        color:blue
+    }
+    </style>
 </head>
 <body>
 <div id="root">
@@ -64,9 +85,19 @@
     <p v-else-if="age===20">20</p>
     <p v-else>not</p>
     <!--三目表达式-->
-    <p v-if="flag?age=18:age=20">{{age}}</p>
+    <!-- <p v-if="flag?age=18:age=20">{{age}}</p> -->
     <!--样式绑定-->
-    <img v-bind:src="imgUrl" width="100" height="100">
+    <img :src="imgUrl" width="100" height="100" :title="title">
+    <img :src="flag?imgUrl:imgUrl2" width="100" height="100" :title="title">
+    <!-- 单个引用 -->
+    <div :class="class_a1">12345</div>
+    <!-- 多个引用，后面的覆盖前面的 -->
+    <div :class="[class_a1,class_a2]">122343345</div>
+<!--    通过bool判断样式-->
+    <div :class="{'a3':cssFlag}">8732894</div>
+
+    <div :style="{color:'red',background:'#f60'}">iuajsdhfiuh</div>
+    <div :style="class_a4">sdafgdsag</div>
 </div>
 </body>
 </html>
